# pyCircuit

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
compiler/frontend/pycircuit/: __init__.py  cli.py  connectors.py  design.py  dsl.py  hw.py  jit.py  trace_dsl.py  v5.py
compiler/mlir/: CMakeLists.txt
compiler/mlir/tools/: pycc.cpp
designs/BypassUnit/: bypass_unit_v5.py
designs/CSU/: IMPLEMENTATION_LOG.md  README.md  __init__.py  csu.py  emit_verilog.py  run_csu_verification.py  sim_csu_perfetto.py  tb_csu.py  test_csu_steps.py
designs/CSU/docs/: ASSUMPTIONS.md  cycle_budget.md  feature_implementation_status.md  feature_list.md  function_list.md  incremental_plan.md  port_list.md  requirement_sources.md  step1.md  step10.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md  step8.md  step9.md  system_test_spec.md  test_list.md  traceability.md  workflow_substeps.md
designs/CSU/scripts/: export_specs_to_md.py
designs/CSU/sim_out/: csu_wave.json
designs/RegisterFile/: regfile.py
designs/XiangShan-pyc/: README.md  build_verilog.py  conftest.py  test_xs_e2e.py  test_xs_functional.py  test_xs_integration.py  test_xs_steps.py  test_xs_system.py
designs/XiangShan-pyc/backend/: backend.py  tb_backend.py
designs/XiangShan-pyc/docs/: ASSUMPTIONS.md  VERIFICATION_PLAN.md  design_hierarchy_plan.md  port_XiangShan_to_pyc.md  requirement_sources.md
designs/XiangShan-pyc/frontend/: frontend.py  tb_frontend.py
designs/XiangShan-pyc/golden/: README.md  (+3 more)
designs/outerCube/: Davinci_supersclar.md  Simplified_Superscalar Design Concepts-2.md  outerCube.md  tregfile.md  tregfile4k.md
docs/: DIAGNOSTICS.md  FRONTEND_API.md  IR_SPEC.md  PIPELINE.md  PRIMITIVES.md  PyCircuit V5 Programming Tutorial.md  PyCircuit_V5_Spec.md  PyCurcit V5_CYCLE_AWARE_API.md  QUICKSTART.md  TESTBENCH.md  cycle_balance_improvement.md  designs_upgrade_to_v5.md  index.md  pyCircuit_Tutorial.md  pycircuit_implementation_method.md
docs/api/: index.md
docs/development/: contributing-workflow.md  index.md  review-and-merge.md  testing-and-gates.md
docs/getting-started/: first-design.md  installation.md  quickstart.md
docs/tutorial/: cycle-aware-computing.md  index.md  unified-signal-model.md
flows/scripts/: pyc  run_examples.sh  run_sims.sh
flows/tools/: dump_pyctrace.py  gen_cmake_from_manifest.py
runtime/cpp/: pyc_byte_mem.hpp  pyc_primitives.hpp  pyc_probe_registry.hpp  pyc_sim.hpp  pyc_sync_mem.hpp  pyc_tb.hpp  pyc_trace_bin.hpp
runtime/verilog/: pyc_byte_mem.v  pyc_fifo.v  pyc_sync_mem.v  pyc_sync_mem_dp.v
tests/system/: test_smoke_system.py
tests/unit/: test_cli_entrypoints.py  test_v5_state_signal.py
tools/: build_all.py  build_design.py
(+215 files in other folders)
